# scyllaDBMessengerAPI

./: Cargo.toml  README.md
src/: main.rs
src/cors/: mod.rs
src/db/: db.rs
src/message/: message.rs
